--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,22 @@ body {
 	display: none;
 }
 
+.restart-button {
+	border: none;
+	padding: 10px 20px;
+	margin: 0 10px;
+	font-size: 16px;
+	font-family: inherit;
+	cursor: pointer;
+	color: #000;
+	background: var(--primary-color);
+}
+
+.restart-button:hover {
+	color: #fff;
+	background: var(--secondary-color);
+}
+
 @keyframes blink {
 	0%,
 	100% {
