--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,8 @@ body {
 	color: #fff;
 	background: var(--secondary-color);
 	font-size: 0.5rem;
-	gap: 2px; /* Chrome */
+	/* gap: 2px; Chrome */
+	line-height: 1.5;
 }
 
 .dialog-overlay {
